añadir estructura principal

--- a/src/ejercicio-01/index.html
+++ b/src/ejercicio-01/index.html
@@ -6,10 +6,12 @@
     <title>Ejercicio 1: Selección de Elementos por ID</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="miElemento">Texto inicial</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      const elemento = document.getElementById('miElemento')
+      elemento.textContent = 'Hola Caracola'
+      
     </script>
   </body>
 </html>
