--- a/src/ejercicio-05/index.html
+++ b/src/ejercicio-05/index.html
@@ -6,10 +6,10 @@
     <title>Ejercicio 5: Cambio de Contenido con `textContent`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
-
+    <div id="miElemento">Texto inicial</div>
     <script>
-      // Escribe tu codigo javascript aqui
+      const elemento = document.getElementById('miElemento')
+      elemento.textContent = 'Otra vez aqui'
     </script>
   </body>
 </html>
