--- a/src/ejercicio-07/index.html
+++ b/src/ejercicio-07/index.html
@@ -6,10 +6,10 @@
     <title>Ejercicio 7: Cambio de Atributos con `setAttribute`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="miElemento">Elemento con atributo</div>
 
-    <script>
-      // Escribe tu codigo javascript aqui
-    </script>
+      <script>
+       const elemento = document.getElementById('miElemento')
+        elemento.setAttribute('Ainoha Martinez', '38')
   </body>
 </html>
