--- a/src/ejercicio-08/index.html
+++ b/src/ejercicio-08/index.html
@@ -6,10 +6,11 @@
     <title>Ejercicio 8: Cambio de Estilos con `style`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="miElemento">Buenaaaaaaaas</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      const elemento = document.getElementById('miElemento')
+      elemento.style.backgroundColor = 'green'
     </script>
   </body>
 </html>
