--- a/src/ejercicio-09/index.html
+++ b/src/ejercicio-09/index.html
@@ -6,10 +6,11 @@
     <title>Ejercicio 9: Manipulación de Clases con `classList`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="miElemento">Bolso de Annekke</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      const elemento = document.getElementById('miElemento')
+      elemento.classList.add('Bellisimo')
     </script>
   </body>
 </html>
