--- a/src/ejercicio-04/index.html
+++ b/src/ejercicio-04/index.html
@@ -6,10 +6,15 @@
     <title>Ejercicio 4: Selección de Elementos con `querySelectorAll`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <p>Primer párrafo</p>
+    <p>Segundo párrafo</p>
+    <p>Tercer párrafo</p>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      const elementos = document.querySelectorAll('p')
+      elementos.forEach((elemento) => {
+        elemento.style.display = 'nada de nada, monada'
+      })
     </script>
   </body>
 </html>
