--- a/src/ejercicio-10/index.html
+++ b/src/ejercicio-10/index.html
@@ -6,10 +6,14 @@
     <title>Ejercicio 10: Agregar Elemento con `appendChild`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="contenedor">Lista</div>
+    <button id="miBoton">Cosa Nueva</button>
 
     <script>
-      // Escribe tu codigo javascript aqui
+       const nuevoElemento = document.createElement('div')
+      nuevoElemento.textContent = 'Coche'
+      const contenedor = document.getElementById('contenedor')
+      contenedor.appendChild(nuevoElemento)
     </script>
   </body>
 </html>
