--- a/src/ejercicio-14/index.html
+++ b/src/ejercicio-14/index.html
@@ -6,10 +6,21 @@
     <title>Ejercicio 14: Detener la Propagación de Evento</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="elementoPadre">
+      <div id="elementoHijo">Haz clic aquí</div>
+    </div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      const elementoHijo = document.getElementById('elementoHijo')
+      elementoHijo.addEventListener('click', (evento) => {
+        evento.stopPropagation()
+        alert('Evento hijo')
+      })
+
+      const elementoPadre = document.getElementById('elementoPadre')
+      elementoPadre.addEventListener('click', () => {
+        alert('Evento padre')
+      })
     </script>
   </body>
 </html>
