--- a/src/ejercicio-19/index.html
+++ b/src/ejercicio-19/index.html
@@ -6,10 +6,16 @@
     <title>Ejercicio 19: Evento de Cambio de Tamaño de Ventana</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="miDiv">Tamaño de ventana: Desconocido</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      const div = document.getElementById('miDiv')
+
+      function actualizarTamañoVentana() {
+      div.textContent = `Tamaño de ventana: ${window.innerWidth} x ${window.innerHeight}`
+      }
+
+      window.addEventListener('resize', actualizarTamañoVentana)
     </script>
   </body>
 </html>
